-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 17.0.0-beta2
-
None
-
68aac3e42 (17.0), 1454f5091 (17.0)
Qt Creator 17.0.0 beta2
macOS (macOS 15 M1 or macOS 13 Intel) used when testing
Boot to Qt 6.9.0 (tested with intel-skylake-64 and imx8qm-mek)
When trying to start Qt Creator 17.0.0 beta2 on macOS (intel or arm based) it crashes with:
Process: Qt Creator [2615] Path: /Users/USER/*/Qt Creator 17.0.0-beta2.app/Contents/MacOS/Qt Creator Identifier: org.qt-project.qtcreator Version: 16.0.83 (16.0.83) Code Type: ARM-64 (Native) Parent Process: launchd [1] User ID: 502 Date/Time: 2025-05-15 12:18:09.2337 +0300 OS Version: macOS 15.4.1 (24E263) Report Version: 12 Anonymous UUID: 84CA8C67-71B2-7518-C049-72B2498C998D Sleep/Wake UUID: B6A36A0C-ED5B-4915-AC06-F6D2E138CBAF Time Awake Since Boot: 340000 seconds Time Since Wake: 1306 seconds System Integrity Protection: enabled Crashed Thread: 0 Dispatch queue: com.apple.main-thread Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000000 Exception Codes: 0x0000000000000001, 0x0000000000000000 Termination Reason: Namespace SIGNAL, Code 11 Segmentation fault: 11 Terminating Process: exc handler [2615] VM Region Info: 0 is not in any region. Bytes before following region: 4300455936 REGION TYPE START - END [ VSIZE] PRT/MAX SHRMOD REGION DETAIL UNUSED SPACE AT START ---> __TEXT 10053c000-100560000 [ 144K] r-x/r-x SM=COW /Users/USER/*/Qt Creator 17.0.0-beta2.app/Contents/MacOS/Qt Creator Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 QtCore 0x1022cc518 QTemporaryDir::filePath(QString const&) const + 60 1 libQmlJSTools.dylib 0x112569da8 0x11255c000 + 56744 2 QtCore 0x10233dce4 0x102258000 + 941284 3 libQmlJSTools.dylib 0x11256a048 0x11255c000 + 57416 4 QtCore 0x10233dce4 0x102258000 + 941284 5 libUtils.16.0.83.dylib 0x1013a7fc8 0x1011bc000 + 2015176 6 libUtils.16.0.83.dylib 0x1013a7938 0x1011bc000 + 2013496 7 libUtils.16.0.83.dylib 0x1013a70d0 0x1011bc000 + 2011344 8 QtCore 0x1022fd33c QMetaObject::invokeMethodImpl(QObject*, QtPrivate::QSlotObjectBase*, Qt::ConnectionType, long long, void const* const*, char const* const*, QtPrivate::QMetaTypeInterface const* const*) + 192 9 libUtils.16.0.83.dylib 0x1013a6f4c 0x1011bc000 + 2010956 10 QtCore 0x10233dce4 0x102258000 + 941284 11 libUtils.16.0.83.dylib 0x1011f5f4c Utils::ProcessInterface::done(Utils::ProcessResultData const&) + 52 12 libDocker.dylib 0x1136bcaf8 0x11369c000 + 133880 13 QtCore 0x10233dce4 0x102258000 + 941284 14 libUtils.16.0.83.dylib 0x1013a7fc8 0x1011bc000 + 2015176 15 libUtils.16.0.83.dylib 0x1013a7938 0x1011bc000 + 2013496 16 libUtils.16.0.83.dylib 0x1013a70d0 0x1011bc000 + 2011344 17 QtCore 0x1022fd33c QMetaObject::invokeMethodImpl(QObject*, QtPrivate::QSlotObjectBase*, Qt::ConnectionType, long long, void const* const*, char const* const*, QtPrivate::QMetaTypeInterface const* const*) + 192 18 libUtils.16.0.83.dylib 0x1013a6f4c 0x1011bc000 + 2010956 19 QtCore 0x10233dce4 0x102258000 + 941284 20 libUtils.16.0.83.dylib 0x1011f5f4c Utils::ProcessInterface::done(Utils::ProcessResultData const&) + 52 21 libUtils.16.0.83.dylib 0x1013b1224 0x1011bc000 + 2052644 22 QtCore 0x10233dce4 0x102258000 + 941284 23 QtCore 0x1024dcea0 0x102258000 + 2641568 24 QtCore 0x10233dd30 0x102258000 + 941360 25 QtCore 0x102350e60 QSocketNotifier::event(QEvent*) + 312 26 QtWidgets 0x100909da0 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 332 27 QtWidgets 0x10090ad5c QApplication::notify(QObject*, QEvent*) + 504 28 QtCore 0x1022ee074 QCoreApplication::sendEvent(QObject*, QEvent*) + 172 29 QtCore 0x10245fc3c 0x102258000 + 2128956 30 CoreFoundation 0x19984cce8 __CFSocketPerformV0 + 940 31 CoreFoundation 0x199824de4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28 32 CoreFoundation 0x199824d78 __CFRunLoopDoSource0 + 172 33 CoreFoundation 0x199824b48 __CFRunLoopDoSources0 + 332 34 CoreFoundation 0x199823738 __CFRunLoopRun + 840 35 CoreFoundation 0x199822d68 CFRunLoopRunSpecific + 572 36 HIToolbox 0x1a4fd627c RunCurrentEventLoopInMode + 324 37 HIToolbox 0x1a4fd94e8 ReceiveNextEventCommon + 676 38 HIToolbox 0x1a5164484 _BlockUntilNextEventMatchingListInModeWithFilter + 76 39 AppKit 0x19d475ab4 _DPSNextEvent + 684 40 AppKit 0x19de14314 -[NSApplication(NSEventRouting) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 688 41 libqcocoa.dylib 0x101a526a4 0x101a3c000 + 91812 42 libExtensionSystem.16.0.83.dylib 0x1006935a0 0x100674000 + 128416 43 QtCore 0x10233dce4 0x102258000 + 941284 44 QtCore 0x10235289c QTimer::timerEvent(QTimerEvent*) + 204 45 QtCore 0x1023360b8 QObject::event(QEvent*) + 104 46 QtWidgets 0x100909da0 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 332 47 QtWidgets 0x10090ad5c QApplication::notify(QObject*, QEvent*) + 504 48 QtCore 0x1022ee074 QCoreApplication::sendEvent(QObject*, QEvent*) + 172 49 QtCore 0x102476674 QTimerInfoList::activateTimers() + 1144 50 libqcocoa.dylib 0x101a51fd8 0x101a3c000 + 90072 51 CoreFoundation 0x199824de4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28 52 CoreFoundation 0x199824d78 __CFRunLoopDoSource0 + 172 53 CoreFoundation 0x199824b48 __CFRunLoopDoSources0 + 332 54 CoreFoundation 0x199823738 __CFRunLoopRun + 840 55 CoreFoundation 0x199822d68 CFRunLoopRunSpecific + 572 56 HIToolbox 0x1a4fd627c RunCurrentEventLoopInMode + 324 57 HIToolbox 0x1a4fd931c ReceiveNextEventCommon + 216 58 HIToolbox 0x1a5164484 _BlockUntilNextEventMatchingListInModeWithFilter + 76 59 AppKit 0x19d475ab4 _DPSNextEvent + 684 60 AppKit 0x19de14314 -[NSApplication(NSEventRouting) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 688 61 AppKit 0x19d468c64 -[NSApplication run] + 480 62 libqcocoa.dylib 0x101a52c30 0x101a3c000 + 93232 63 QtCore 0x1022f792c QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 588 64 QtCore 0x1022edd4c QCoreApplication::exec() + 148 65 Qt Creator 0x10054b74c 0x10053c000 + 63308 66 dyld 0x19939ab4c start + 6000
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-32960 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
645743,2 | Docker/Process/QmlJS: Add some guards | 17.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |
646056,3 | Docker: Fix done emissions in case of failed process start | 17.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |