Docker/Process/QmlJS: Add some guards

This works around a crash that currently happens on startup when Boot2Qt
is installed on macOS (or probably any other Docker based setup).

Task-number: QTCREATORBUG-32960
Change-Id: Icc99dfb6ebf1d738a1d4fde1605370de24736a8b
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>